@@ -20,7 +20,7 @@ package openpgp
 import (
 	"code.google.com/p/go.crypto/openpgp/armor"
 	"crypto/sha256"
-	"github.com/cmars/sqlx"
+	"github.com/jmoiron/sqlx"
 	"github.com/stretchr/testify/assert"
 	"launchpad.net/hockeypuck"
 	"testing"
